force-app/main/default/objects/Specie__c/fields/Good_provider__c.field-meta.xml
<CustomField>
    <fullName>Good_provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Good provider</label>
    <type>Checkbox</type>
</CustomField>