force-app/main/default/objects/Specie__c/fields/Is_expensive__c.field-meta.xml
<CustomField>
    <fullName>Is_expensive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is expensive</label>
    <type>Checkbox</type>
</CustomField>