force-app/main/default/objects/Specie__c/fields/Parameter_1__c.field-meta.xml
<CustomField>
    <fullName>Parameter_1__c</fullName>
    <label>Parameter 1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>