force-app/main/default/objects/Specie__c/fields/Parameter_2__c.field-meta.xml
<CustomField>
    <fullName>Parameter_2__c</fullName>
    <label>Parameter 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>