force-app/main/default/objects/Specie__c/fields/Pesticide__c.field-meta.xml
<CustomField>
    <fullName>Pesticide__c</fullName>
    <label>Pesticide</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type 1</fullName>
            </value>
            <value>
                <fullName>Type 2</fullName>
            </value>
            <value>
                <fullName>Type 3</fullName>
            </value>
            <value>
                <fullName>Type 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>