force-app/main/default/objects/Specie__c/fields/Pesticide_cost__c.field-meta.xml
<CustomField>
    <fullName>Pesticide_cost__c</fullName>
    <label>Pesticide cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>