force-app/main/default/objects/Specie__c/fields/Provider_Number__c.field-meta.xml
<CustomField>
    <fullName>Provider_Number__c</fullName>
    <label>Provider Number</label>
    <type>Phone</type>
</CustomField>