force-app/main/default/objects/Specie__c/fields/Require_pesticide__c.field-meta.xml
<CustomField>
    <fullName>Require_pesticide__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Require pesticide</label>
    <type>Checkbox</type>
</CustomField>