force-app/main/default/objects/Specie__c/fields/Scientific_name__c.field-meta.xml
<CustomField>
    <fullName>Scientific_name__c</fullName>
    <label>Scientific name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>